--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="line"></div>
         <form>
           <input>
-          <button>Puhu!</button>
+          <button>Prata!</button>
         </form>
       </div>
     </div>
